--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Contao Developer Documentaion : Developer documentation for Contao Open Source CMS" />
+    <meta name="description" content="Contao Developer Documentation : Developer documentation for the Contao Open Source CMS" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Contao Developer Documentaion</title>
+    <title>Contao Developer Documentation</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/xchs/contao-docs">View on GitHub</a>
 
-          <h1 id="project_title">Contao Developer Documentaion</h1>
-          <h2 id="project_tagline">Developer documentation for Contao Open Source CMS</h2>
+          <h1 id="project_title">Contao Developer Documentation</h1>
+          <h2 id="project_tagline">Developer documentation for the Contao Open Source CMS</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/xchs/contao-docs/zipball/master">Download this project as a .zip file</a>
@@ -36,64 +36,64 @@
 <p>Hooks work similar to the <a href="callbacks.md">callback functions</a> of the Data Container Array. You can register one or more functions for a certain event and when the event is triggered, the callback functions are executed. Hooks allow you to add custom functionality to the core.</p>
 
 <ul>
-<li><a href="hooks/activateAccount.md">activateAccount</a></li>
-<li><a href="hooks/activateRecipient.md">activateRecipient</a></li>
-<li><a href="hooks/addComment.md">addComment</a></li>
-<li><a href="hooks/addCustomRegexp.md">addCustomRegexp</a></li>
-<li><a href="hooks/addLogEntry.md">addLogEntry</a></li>
-<li><a href="hooks/checkCredentials.md">checkCredentials</a></li>
-<li><a href="hooks/closeAccount.md">closeAccount</a></li>
-<li><a href="hooks/compileDefinition.md">compileDefinition</a></li>
-<li><a href="hooks/createDefinition.md">createDefinition</a></li>
-<li><a href="hooks/createNewUser.md">createNewUser</a></li>
-<li><a href="hooks/executePreActions.md">executePreActions</a></li>
-<li><a href="hooks/executePostActions.md">executePostActions</a></li>
+<li><a href="en/hooks/activateAccount.md">activateAccount</a></li>
+<li><a href="en/hooks/activateRecipient.md">activateRecipient</a></li>
+<li><a href="en/hooks/addComment.md">addComment</a></li>
+<li><a href="en/hooks/addCustomRegexp.md">addCustomRegexp</a></li>
+<li><a href="en/hooks/addLogEntry.md">addLogEntry</a></li>
+<li><a href="en/hooks/checkCredentials.md">checkCredentials</a></li>
+<li><a href="en/hooks/closeAccount.md">closeAccount</a></li>
+<li><a href="en/hooks/compileDefinition.md">compileDefinition</a></li>
+<li><a href="en/hooks/createDefinition.md">createDefinition</a></li>
+<li><a href="en/hooks/createNewUser.md">createNewUser</a></li>
+<li><a href="en/hooks/executePreActions.md">executePreActions</a></li>
+<li><a href="en/hooks/executePostActions.md">executePostActions</a></li>
 <li>generateBreadcrumb</li>
-<li><a href="hooks/generateFrontendUrl.md">generateFrontendUrl</a></li>
-<li><a href="hooks/generatePage.md">generatePage</a></li>
-<li><a href="hooks/getAllEvents.md">getAllEvents</a></li>
+<li><a href="en/hooks/generateFrontendUrl.md">generateFrontendUrl</a></li>
+<li><a href="en/hooks/generatePage.md">generatePage</a></li>
+<li><a href="en/hooks/getAllEvents.md">getAllEvents</a></li>
 <li>getArticle</li>
 <li>getCacheKey</li>
 <li>getCombinedFile</li>
-<li><a href="hooks/getContentElement.md">getContentElement</a></li>
+<li><a href="en/hooks/getContentElement.md">getContentElement</a></li>
 <li>getCountries</li>
 <li>getForm</li>
 <li>getFrontendModule</li>
-<li><a href="hooks/getImage.md">getImage</a></li>
-<li><a href="hooks/getPageIdFromUrl.md">getPageIdFromUrl</a></li>
+<li><a href="en/hooks/getImage.md">getImage</a></li>
+<li><a href="en/hooks/getPageIdFromUrl.md">getPageIdFromUrl</a></li>
 <li>getRootPageFromUrl</li>
-<li><a href="hooks/getSearchablePages.md">getSearchablePages</a></li>
+<li><a href="en/hooks/getSearchablePages.md">getSearchablePages</a></li>
 <li>getSystemMessages</li>
 <li>getUserNavigation</li>
-<li><a href="hooks/importUser.md">importUser</a></li>
-<li><a href="hooks/isAllowedToEditComment.md">isAllowedToEditComment</a></li>
-<li><a href="hooks/listComments.md">listComments</a></li>
-<li><a href="hooks/loadFormField.md">loadFormField</a></li>
-<li><a href="hooks/loadDataContainer.md">loadDataContainer</a></li>
-<li><a href="hooks/loadLanguageFile.md">loadLanguageFile</a></li>
-<li><a href="hooks/outputBackendTemplate.md">outputBackendTemplate</a></li>
-<li><a href="hooks/outputFrontendTemplate.md">outputFrontendTemplate</a></li>
+<li><a href="en/hooks/importUser.md">importUser</a></li>
+<li><a href="en/hooks/isAllowedToEditComment.md">isAllowedToEditComment</a></li>
+<li><a href="en/hooks/listComments.md">listComments</a></li>
+<li><a href="en/hooks/loadFormField.md">loadFormField</a></li>
+<li><a href="en/hooks/loadDataContainer.md">loadDataContainer</a></li>
+<li><a href="en/hooks/loadLanguageFile.md">loadLanguageFile</a></li>
+<li><a href="en/hooks/outputBackendTemplate.md">outputBackendTemplate</a></li>
+<li><a href="en/hooks/outputFrontendTemplate.md">outputFrontendTemplate</a></li>
 <li>parseArticles</li>
-<li><a href="hooks/parseBackendTemplate.md">parseBackendTemplate</a></li>
-<li><a href="hooks/parseFrontendTemplate.md">parseFrontendTemplate</a></li>
+<li><a href="en/hooks/parseBackendTemplate.md">parseBackendTemplate</a></li>
+<li><a href="en/hooks/parseFrontendTemplate.md">parseFrontendTemplate</a></li>
 <li>parseTemplate</li>
-<li><a href="hooks/postDownload.md">postDownload</a></li>
-<li><a href="hooks/postLogin.md">postLogin</a></li>
-<li><a href="hooks/postLogout.md">postLogout</a></li>
-<li><a href="hooks/postUpload.md">postUpload</a></li>
-<li><a href="hooks/printArticleAsPdf.md">printArticleAsPdf</a></li>
-<li><a href="hooks/processFormData.md">processFormData</a></li>
-<li><a href="hooks/removeOldFeeds.md">removeOldFeeds</a></li>
-<li><a href="hooks/removeRecipient.md">removeRecipient</a></li>
-<li><a href="hooks/replaceInsertTags.md">replaceInsertTags</a></li>
-<li><a href="hooks/reviseTable.md">reviseTable</a></li>
+<li><a href="en/hooks/postDownload.md">postDownload</a></li>
+<li><a href="en/hooks/postLogin.md">postLogin</a></li>
+<li><a href="en/hooks/postLogout.md">postLogout</a></li>
+<li><a href="en/hooks/postUpload.md">postUpload</a></li>
+<li><a href="en/hooks/printArticleAsPdf.md">printArticleAsPdf</a></li>
+<li><a href="en/hooks/processFormData.md">processFormData</a></li>
+<li><a href="en/hooks/removeOldFeeds.md">removeOldFeeds</a></li>
+<li><a href="en/hooks/removeRecipient.md">removeRecipient</a></li>
+<li><a href="en/hooks/replaceInsertTags.md">replaceInsertTags</a></li>
+<li><a href="en/hooks/reviseTable.md">reviseTable</a></li>
 <li>setCookie</li>
-<li><a href="hooks/setNewPassword.md">setNewPassword</a></li>
+<li><a href="en/hooks/setNewPassword.md">setNewPassword</a></li>
 <li>sqlCompileCommands</li>
 <li>sqlGetFromDB</li>
 <li>sqlGetFromFile</li>
 <li>storeFormData</li>
-<li><a href="hooks/validateFormField.md">validateFormField</a></li>
+<li><a href="en/hooks/validateFormField.md">validateFormField</a></li>
 <li>updatePersonalData</li>
 </ul>
       </section>
@@ -102,7 +102,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Contao Developer Documentaion maintained by <a href="https://github.com/xchs">xchs</a></p>
+        <p class="copyright">Contao Developer Documentation maintained by <a href="https://github.com/xchs">xchs</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
